# rawtoaces

./: .gitignore  .readthedocs.yaml  CMakeLists.txt
.github/workflows/: build-steps.yml  docs.yml
build_scripts/: install_deps_mac.bash
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  contributing.rst  getting_started.rst  index.rst  requirements.txt  user_guide.rst
docs/api/: image_converter.rst  index.rst  rawtoaces_core.rst  spectral_data.rst
include/rawtoaces/: image_converter.h  spectral_data.h  usage_timer.h
src/rawtoaces_core/: rawtoaces_core.cpp  spectral_data.cpp
src/rawtoaces_util/: image_converter.cpp  usage_timer.cpp
tests/: testIDT.cpp  testIllum.cpp  test_SpectralData.cpp  test_image_converter.cpp
